Working Copy before dist command is used

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = typing_meter
 license = GPL
 description = A command line tool to improve typing speed
 author = Project Exhibition
-url = https://github.com/mithil467/mitype
+url = https://github.com/hssaluja25/Typing-Meter
 keywords = TERMINAL, WPM, SPEED, TYPE
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -34,23 +34,11 @@ include_package_data = True
 zip_safe = False
 
 [options.package_data]
-mitype = data.db
+typing_meter = data.db
 
 [options.extras_require]
 dev = pytest
 
 [options.entry_points]
 console_scripts =
-    mitype=mitype.app:App
-
-
-# See the docstring in versioneer.py for instructions. Note that you must
-# re-run 'versioneer install' after changing this section, and commit the
-# resulting files.
-[versioneer]
-VCS = git
-style = pep440
-tag_prefix = v
-versionfile_source = mitype/_version.py
-versionfile_build = mitype/_version.py
-parentdir_prefix = mitype-
+    typing_meter=typing_meter.app:App
